<resources>
    <!-- Title and App information -->
    <string name="app_name">My Library</string>

    <!-- Strings For Bottom Navigation Menu -->
    <string name="add_icon_text">Add Book</string>
    <string name="booklist_icon_text">Stored Books</string>
    <string name="appstats_icon_text">App Stats</string>
    <string name="settings_icon_text">Settings</string>
    <string name="search_icon_text">Search Here</string>

    <!-- Strings For Item Context Menu -->
    <string name="context_delete_item">Delete Book</string>
    <string name="context_edit_item">Edit Book</string>
    <string name="context_cancel">Cancel</string>

    <!-- Strings For Filter Menu -->
    <string name="filter_read">Read Books</string>
    <string name="filter_not_read">Not Read Books</string>

    <!-- String for login and signup fragments -->
    <string name="app_logo">My Library</string>
    <string name="login_username">Username or email</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_remember">Remember me</string>
    <string name="login_signup_sentence">Don\'t have an account?</string>
    <string name="signup_login_sentence">Already have an account?</string>
    <string name="login_signup_link">Create an Account</string>
    <string name="signup_login_link">Login</string>
    <string name="signup_name">Name</string>
    <string name="signup_username">Username</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_conf">Confirm password</string>
    <string name="signup_terms">I agree to the terms of services</string>
    <string name="signup_btn">Create Account</string>

    <!-- Strings For addBook Fragment layout and class -->
    <string name="addbook_title_page">Add a New Book</string>
    <string name="read_status_false">Not Read Yet</string>
    <string name="read_status_true">Finished Reading</string>
    <string name="addbook_action">Add Book</string>
    <string name="addbook_title_field">Title</string>
    <string name="addbook_title_hint">Enter Title</string>
    <string name="addbook_author_field">Author</string>
    <string name="addbook_author_hint">Enter Author</string>
    <string name="addbook_reset">Reset</string>
    <string name="addbook_spinner_text_view">Shelf Location</string>

    <!-- Strings For Author and Title usages -->
    <string name="title_field_hint">Title</string>
    <string name="author_field_hint">Author</string>
    <string name="shelf_field_hint">Location</string>

    <!-- Strings For PopupMenu -->
    <string name="pop_is_read_switch_true">Finished Reading</string>
    <string name="pop_is_read_switch_false">Not Read Yet</string>
    <string name="pop_cancel_btn">Cancel</string>
    <string name="pop_update_btn">Update</string>
    <string name="pop_title_str">Title</string>
    <string name="pop_author_str">Author</string>
    <string name="pop_author_hint">Change Author</string>
    <string name="pop_title_hint">Change Title</string>
    <string name="pop_edit_title">Edit A Book</string>
    <string name="pop_shelf_hint">Shelf:</string>
    <string name="pop_read_hint">Read Status:</string>

    <!-- Strings For bookView Fragment layout and class -->
    <string name="book_view_title_string">My Books</string>

    <!-- Strings For bookView Fragment layout and class -->
    <string name="settings_title_string">Settings</string>
    <string name="settings_shelf_card">Manage Shelves</string>
    <string name="settings_shelf_tv">Add New Shelf:</string>
    <string name="settings_submit_btn">Add</string>
    <string name="settings_stored_tv">Stored Shelves:</string>
    <string name="settings_layout_title">Manage Layout</string>
    <string name="settings_layout_info">Change how books are presented on main screen:</string>
    <string name="settings_refresh_layout">Refresh</string>
    <string name="settings_account_title">Manage Account</string>
    <string name="settings_account_remember">Remember Login info</string>
    <string name="settings_account_user_tv">Account</string>
    <string name="settings_transfer_button">Copy</string>
    <string name="settings_account_user">Username</string>
    <string name="settings_transfer_books">Copy books and shelves to account</string>
    <string-array name="settings_layout_option">
        <item>Alphabetical by Title</item>
        <item>Alphabetical by Author</item>
        <item>Sort by Shelf</item>
    </string-array>

    <!-- Strings For appStats Fragment layout and class -->
    <string name="appstats_title">App Stats</string>
    <string name="appstats_storedStats">Stats About Books</string>
    <string name="appstats_general_app_stats">General App Stats</string>
    <string name="appstats_no_stats">Nothing To Report!</string>
    <string name="appstats_book_count">Number of Books</string>
    <string name="appstats_read_count">Books Read</string>
    <string name="appstats_not_read_count">Books Not Read</string>

    <string name="appstats_app_version">App Version</string>
    <string name="appstats_database_version">Database Version</string>
    <string name="appstats_modification_data">Last Update</string>
    <string name="appstats_app_version_number">1.2.0</string>
    <string name="appstats_database_version_number">2</string>
    <string name="appstats_modification_data_value">2 March 2022</string>

    <string name="appstats_changeLog">Change Log and What\'s New</string>
    <string name="change_log">
        - New icon for the app!\n\n
        - Added feature that allows storing shelf information\n\n
        - Data base accepts shelf information now\n\n
        - \'Add book\' page layout is changed\n\n
        - Fixed transition animations so that they occur when moving.\n\n
        - Navigation menu does not move up when keyboard is opened!\n\n
        - User can choose which order books appear in the view\n\n
    </string>

</resources>