<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragSignUp">


    <RelativeLayout
        android:id="@+id/signup_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="70dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            android:text="@string/app_logo"
            android:textColor="@color/primary_dark"
            android:textSize="70sp" />

        <!-- Input Fields -->
        <EditText
            android:id="@+id/signup_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_logo"
            android:layout_marginTop="100dp"
            android:hint="@string/signup_name" />

        <EditText
            android:id="@+id/signup_username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_name_field"
            android:layout_marginTop="15dp"
            android:hint="@string/signup_username" />

        <EditText
            android:id="@+id/signup_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_username_field"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/signup_email" />

        <EditText
            android:id="@+id/signup_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_email_field"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/signup_password" />

        <EditText
            android:id="@+id/signup_password_conf_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_password_field"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/signup_password_conf" />

        <CheckBox
            android:id="@+id/signup_terms_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_password_conf_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/signup_terms"
            android:textSize="16sp"
            android:buttonTint="@color/primary_dark"/>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_terms_box"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/primary"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signup_btn"
            android:textAllCaps="false"
            android:textColor="@color/primary_gold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_login_sentence"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signup_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:text="@string/signup_login_link"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/signup_progress_bar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/primary_dark"/>


</RelativeLayout>