<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/generic_background">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <LinearLayout
        android:layout_below="@id/top_view"
        android:orientation="horizontal"
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:layout_width="50dp"
            android:layout_height="match_parent"/>

        <TextView
            android:background="@drawable/shape_addbook_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:textStyle="bold"
            android:textColor="@color/primary_gold"
            android:padding="20dp"
            android:textSize="25sp"
            android:text="@string/addbook_title_page"
            />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/addbook_title_field"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            tools:layout_editor_absoluteX="10dp" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="15dp"
            android:hint="@string/addbook_title_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/addbook_author_field"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            tools:layout_editor_absoluteX="10dp" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/addbook_author_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/addbook_resetBTN"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/primary"
            android:text="@string/addbook_reset"
            android:textAllCaps="false"
            android:textColor="@color/primary_gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/primary"
            android:text="@string/addbook_action"
            android:textAllCaps="false"
            android:textColor="@color/primary_gold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/my_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_status_false"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:trackTint="@color/primary"
            android:theme="@style/Switches"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>