<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="9dp"
    android:elevation="4dp">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:hint="@string/title_field_hint"
                android:maxLines="1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/title_textView"
                android:hint="@string/author_field_hint"
                android:paddingTop="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/location_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:textStyle="italic"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/shelf_field_hint"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/recycler_view_checkIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="47" />

        <ImageButton
            android:id="@+id/more_options_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="48"
            android:background="@color/white"
            android:src="@drawable/context_more_options" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
